Update 데이터 모델링의 이해.md

--- a/subject_1/데이터 모델링의 이해.md
+++ b/subject_1/데이터 모델링의 이해.md
@@ -189,3 +189,57 @@
 - 엔티티 내에서 인스턴스를 구분하는 구분자
 - **식별자 → 논리 데이터 모델링** 단계에서 사용
 - **Key → 물리 데이터 모델링** 단계에서 사용
+
+#### 키의 종류
+
+- 기본키: 후보키 중에 엔티티를 대표할 수 있는 키
+- 후보키: 유일성과 최소성을 만족
+- 슈퍼키: 유일성은 만족, 최소성은 만족하지 않음
+- 대체키: 여러개 후보키중에 기본키 이외의 키
+
+#### 식별자 종류 - 대표성
+
+- 주식별자: 유일성과 최소성을 만족하고 엔티티를 대표함
+- 보조 식별자: 유일성과 최소성을 만족하지만 엔티티의 대표성은 만족하지 않음
+
+#### 식별자 종류 - 생성 여부
+
+- 내부 식별자: 스스로 생성되는 식별자 ex 부서코드, 주문번호
+- 외부 식별자: 다른 엔티티에서 가져오는 식별자 FK
+
+#### 식별자 종류 - 속성의 수
+
+- 단일 식별자: 하나의 속성으로 구성
+- 복합 식별자: 두 개 이상의 속성으로 구성
+
+#### 식별자 종류 - 대체 여부
+
+- 본질 식별자: 업무에 의해 만들어짐 ex 부서이름
+- 인조 식별자: 인위적으로 만들어짐 ex 부서코드
+
+#### 주식별자 도출 기준
+
+- 해당 업무에서 자주 이용되는 속성
+- 명칭, 내역 등과 같이 이름 x
+- 복합으로 주식별자를 구성할 경우 너무 많은 속성 x
+
+#### 식별 관계와 비식별 관계 – 식별 관계
+
+- **부모로부터 받은 식별자**를 자식엔터티의 **주식별자**로 이용
+- 강한 연결관계 표현, 실선 표기
+- 강한 개체는 누구에게도 지배되지 않는 독립적인 개체
+- 강한 개체는 다른 엔터티에게 기본 키를 제공
+- 강한 개체는 식별 관계로 표현
+- 강한 개체의 기본키 값이 변경되면 식별 관계에 있는 자
+식 엔터티의 값도 변경
+
+#### 식별 관계와 비식별 관계 – 비식별 관계
+
+- **부모에게 받은 식별자**를 자식엔터티에서 **일반 속성**으로 사용
+- 부모 없는 자식이 생성될 수 있는 경우
+- 부모와 자식의 생명주기가 다른 경우
+- 여러개의 엔터티가 하나의 엔터티로 통합되어 표현되었는 데 각각의 엔터티가 별도의 관계를 가진 경우
+- 자식에 별도의 주식별자를 생성하는 것이 더 유리한 경우
+- SQL 문장이 길어져 복잡성 증가되는 것 방지
+- 약한 연결관계 표현, 점선 표기
+- 자식의 주식별자 구성을 독립적으로 구성
