Create 데이터 모델과 성능.md

--- a/subject_1/1-1. 데이터 모델링의 이해 copy.md
+++ b/subject_1/1-1. 데이터 모델링의 이해 copy.md
@@ -32,7 +32,7 @@
   - DBMS에 테이블, 인덱스 생성하는 단계
 
 #### 데이터 모델링 관점
-
+![Alt text](image.png)
 - 데이터 관점: 구조분석, 정적 분석
 - 프로세스 관점: 시나리오분석, 도메인 분석, 동적분석
 - 데이터와 프로세스: 프롯스와 데이터 간의 관계
